--- a/graceworths/src/App.css
+++ b/graceworths/src/App.css
@@ -1,38 +1,30 @@
 .App {
-  text-align: center;
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.blue {
+  background-color: #273739;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.white {
+  background-color: #273739;
+  color: white;
 }
+.light {
+  background-color: #ffffff;
+  color: black;
+}
+.landing-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: Sahitya;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 67px;
+  line-height: 104px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
